--- a/posts/2017-04-24.md
+++ b/posts/2017-04-24.md
@@ -208,6 +208,29 @@ The first version of this code did several things differently, each of which had
 
 If you attach a profiler to the current program, roughly half of the remaining time (about 80ms) is now spent de-allocating buffers of `LineItem` entries, the roughly 1GB of input data that we retire in the `flat_map`, in chunks of whatever our batch size is. I don't know enough to know if this is surprisingly large, or otherwise avoidable. In a "real" system we would almost certainly want to recycle these buffers rather than drop them, but since all of our input are pre-prepared, we don't have anything to do with recycled buffers. If we went columnar, we could avoid even having the other fields around in the first place, but that feels a bit like cheating (or smarts, hard to tell the difference some times).
 
+#### [Query 13](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query13.rs)
+
+Query 13 counts up the number of orders for each customer, including customers with zero orders. We can compute this pretty easily by concatenating the set of customer keys (from `customers`) with the keys in `orders`. Then we count them up for each customer, and then we count the number of customers with each count. There is some pre-filtering based on the comments while I'll just skip for the moment. The remaining fragment is
+
+```rust
+collections
+    .customers()
+    .map(|c| c.cust_key)
+    .concat(&orders)
+    .count()
+    .map(|(_cust_key, count)| (count-1) as usize)
+    .count()
+```
+
+This is a total sane query, but it doesn't exploit some sweet structure we have: the keys for each of the `count` calls are themselves unsigned integers. Rather than hashing these integers all over the place (which is how we work with generic keys) we can use a special form of `count` which operates on integer keys: `count_u`. 
+
+|         |  1,000 | 10,000 | 100,000| 1,000,000 | peak rate |   hot dog |
+|--------:|-------:|-------:|-------:|----------:|----------:|----------:|
+| query13 |  9.18s |  5.99s |  4.79s |     3.77s | 438.03K/s |        /s |
+| query13+|  6.24s |  4.58s |  3.83s |     3.05s | 541.68K/s |           |
+
+This is a decent improvement, and it applies pretty broadly. To be honest, I did this last because I totally forgot about it, so several of the other queries that have joins and groupings on keys, which are all nice integers in this setting, should be similarly improved with `join_u`, `semijoin_u`, `group_u` and all these things. I'll get to work on re-measuring things and will remove this text once I do. Not yet, apparently; ha!
+
 #### [Query 04](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query04.rs)
 
 Query 4 does a few things, but from our point of view it (i) filters about half of the `lineitems` away, and then (ii) calls `distinct` on the remaining `order_key` fields in evidence. Roughly, we need to filter down orders by those with a line item entry violating a delivery commitment; about half of the line item records violate their delivery commitment, so perhaps we shouldn't try too hard to emulate this particular firm.
@@ -465,7 +488,7 @@ We are going to hold a fixed product of logical and physical batching, so that w
 | query10  |      3.10s |      3.11s |      2.83s |      2.82s |      2.84s |      2.80s |   2.73M/s |
 | query11  |      9.99s |      9.76s |      7.93s |      2.22s |      0.52s |      0.39s |   2.09M/s |
 | query12  |      1.16s |      1.14s |      1.14s |      1.14s |      1.13s |      1.11s |   6.79M/s |
-| query13  |      4.78s |      4.66s |      3.82s |      3.38s |      3.24s |      3.04s | 543.50K/s |
+| query13  |      3.80s |      3.65s |      2.84s |      2.47s |      2.33s |      2.21s | 746.20K/s |
 | query14  |      0.49s |      0.48s |      0.49s |      0.48s |      0.50s |      0.50s |  12.84M/s |
 | query15  |      0.48s |      0.48s |      0.48s |      0.48s |      0.47s |      0.46s |  13.11M/s |
 | query16  |      0.91s |      0.81s |      0.64s |      0.62s |      0.60s |      0.72s |   1.68M/s |
@@ -484,34 +507,34 @@ How do things look as we add more workers. Or, in this case, as we add one more 
 
 To take an example, query 15 initially has a global aggregation to determine the maximum. This puts all of the work on one worker. As we introduced the hierarchical aggregation, with the goal of improving the incremental udpate times, we also introduce the opportunity for concurrent work due to the multiple keys involved.
 
-|          | 100000 x 1 | 100000 x 1 -w2 | peak rate |
-|---------:|-----------:|---------------:|----------:|
-| query01  |      1.21s |          1.07s |   5.63M/s |
-| query02  |      0.47s |          0.32s |   3.21M/s |
-| query03  |      1.80s |          1.17s |   6.55M/s |
-| query04  |      3.27s |          1.89s |   3.96M/s |
-| query05  |      3.28s |          2.50s |   3.06M/s |
-| query06  |      0.16s |          0.12s |  49.22M/s |
-| query07  |      1.83s |          1.24s |   6.31M/s |
-| query08  |      3.91s |          3.12s |   2.45M/s |
-| query09  |      6.25s |          5.38s |   1.69M/s |
-| query10  |      2.80s |          1.86s |   4.08M/s |
-| query11  |      0.39s |          0.27s |   3.03M/s |
-| query12  |      1.11s |          0.73s |  10.26M/s |
-| query13  |      3.04s |          1.61s |   1.02M/s |
-| query14  |      0.50s |          0.34s |  18.08M/s |
-| query15  |      0.46s |          0.31s |  19.54M/s |
-| query16  |      0.72s |          0.44s |   2.32M/s |
-| query17  |      3.23s |          2.80s |   2.21M/s |
-| query18  |      7.73s |          4.62s |   1.66M/s |
-| query19  |      0.24s |          0.16s |  39.92M/s |
-| query20  |      0.88s |          0.63s |  10.78M/s |
-| query21  |      9.22s |          6.53s |   1.15M/s |
-| query22  |      1.30s |          0.69s |   2.40M/s |
+|          | 100000 x 1 | 100000 x 1 -w2 | peak rate | improvement |
+|---------:|-----------:|---------------:|----------:|------------:|
+| query01  |      1.21s |          1.07s |   5.63M/s | 1.13x       |
+| query02  |      0.47s |          0.32s |   3.21M/s | 1.46x       |
+| query03  |      1.80s |          1.17s |   6.55M/s | 1.54x       |
+| query04  |      3.27s |          1.89s |   3.96M/s | 1.73x       |
+| query05  |      3.28s |          2.50s |   3.06M/s | 1.31x       |
+| query06  |      0.16s |          0.12s |  49.22M/s | 1.33x       |
+| query07  |      1.83s |          1.24s |   6.31M/s | 1.48x       |
+| query08  |      3.91s |          3.12s |   2.45M/s | 1.25x       |
+| query09  |      6.25s |          5.38s |   1.69M/s | 1.16x       |
+| query10  |      2.80s |          1.86s |   4.08M/s | 1.51x       |
+| query11  |      0.39s |          0.27s |   3.03M/s | 1.44x       |
+| query12  |      1.11s |          0.73s |  10.26M/s | 1.52x       |
+| query13  |      2.21s |          1.14s |   1.45M/s | 1.94x       |
+| query14  |      0.50s |          0.34s |  18.08M/s | 1.47x       |
+| query15  |      0.46s |          0.31s |  19.54M/s | 1.48x       |
+| query16  |      0.72s |          0.44s |   2.32M/s | 1.64x       |
+| query17  |      3.23s |          2.80s |   2.21M/s | 1.15x       |
+| query18  |      7.73s |          4.62s |   1.66M/s | 1.67x       |
+| query19  |      0.24s |          0.16s |  39.92M/s | 1.50x       |
+| query20  |      0.88s |          0.63s |  10.78M/s | 1.40x       |
+| query21  |      9.22s |          6.53s |   1.15M/s | 1.41x       |
+| query22  |      1.30s |          0.69s |   2.40M/s | 1.88x       |
 
 Oh hooray! They are all above one million tuples per second now! One million tuples piped into who knows what computations. It is possible that some of these are even correct, but let's not get ahead of ourselves. If nothing else, differential dataflow is good at moving tuples around.
 
-Also, if you are the sort of person who notices, all of the two worker times are better than the one worker time. And we didn't even write the code with parallelism in mind. I swear.
+Also, if you are the sort of person who notices, all of the two-worker times are better than the corresponding one-worker time. And we didn't even write the code with parallelism in mind. I swear.
 
 ### Conclusions, for now
 
