update numbers for _u versions

--- a/posts/2017-04-24.md
+++ b/posts/2017-04-24.md
@@ -222,14 +222,14 @@ collections
     .count()
 ```
 
-This is a total sane query, but it doesn't exploit some sweet structure we have: the keys for each of the `count` calls are themselves unsigned integers. Rather than hashing these integers all over the place (which is how we work with generic keys) we can use a special form of `count` which operates on integer keys: `count_u`. 
+This is a total sane query, but it doesn't exploit some sweet structure we have: the keys for each of the `count` calls are themselves unsigned integers. Rather than hashing these integers all over the place (which is how we work with generic keys) we can use a special form of `count` which operates on unsigned integer keys: `count_u`. 
 
 |         |  1,000 | 10,000 | 100,000| 1,000,000 | peak rate |   hot dog |
 |--------:|-------:|-------:|-------:|----------:|----------:|----------:|
-| query13 |  9.18s |  5.99s |  4.79s |     3.77s | 438.03K/s |        /s |
+| query13 |  9.18s |  5.99s |  4.79s |     3.77s | 438.03K/s | 779.52K/s |
 | query13+|  6.24s |  4.58s |  3.83s |     3.05s | 541.68K/s |           |
 
-This is a decent improvement, and it applies pretty broadly. To be honest, I did this last because I totally forgot about it, so several of the other queries that have joins and groupings on keys, which are all nice integers in this setting, should be similarly improved with `join_u`, `semijoin_u`, `group_u` and all these things. I'll get to work on re-measuring things and will remove this text once I do. Not yet, apparently; ha!
+This is a decent improvement, and it applies pretty broadly. To be honest, I did this last because I totally forgot about it, so several of the other queries that have joins and groupings on keys, which are all nice integers in this setting, should be similarly improved with `join_u`, `semijoin_u`, `group_u` and all these things. The final measurements at the bottom reflect these updates, but the various query vignettes do not.
 
 #### [Query 04](https://github.com/frankmcsherry/differential-dataflow/blob/master/tpchlike/src/queries/query04.rs)
 
@@ -477,27 +477,27 @@ We are going to hold a fixed product of logical and physical batching, so that w
 |          | 1 x 100000 | 10 x 10000 | 100 x 1000 | 1000 x 100 | 10000 x 10 | 100000 x 1 | peak rate |
 |---------:|-----------:|-----------:|-----------:|-----------:|-----------:|-----------:|----------:|
 | query01  |      5.54s |      4.89s |      2.74s |      1.35s |      1.23s |      1.21s |   4.96M/s |
-| query02  |      0.46s |      0.39s |      0.41s |      0.39s |      0.42s |      0.47s |   2.59M/s |
-| query03  |      1.90s |      1.92s |      1.75s |      1.75s |      1.82s |      1.80s |   4.38M/s |
+| query02  |      0.35s |      0.32s |      0.32s |      0.31s |      0.32s |      0.40s |   3.30M/s |
+| query03  |      1.74s |      1.10s |      0.95s |      0.93s |      0.97s |      0.93s |   8.25M/s |
 | query04  |      4.12s |      3.96s |      3.59s |      3.65s |      3.45s |      3.27s |   2.30M/s |
-| query05  |      2.92s |      3.28s |      3.35s |      3.27s |      3.37s |      3.28s |   2.63M/s |
+| query05  |      1.79s |      2.12s |      2.33s |      2.14s |      2.19s |      2.19s |   3.58M/s |
 | query06  |      0.17s |      0.17s |      0.17s |      0.17s |      0.17s |      0.16s |  36.54M/s |
-| query07  |      1.76s |      1.85s |      1.76s |      1.77s |      1.80s |      1.83s |   4.34M/s |
-| query08  |      3.70s |      3.64s |      3.64s |      3.94s |      3.93s |      3.91s |   2.11M/s |
-| query09  |      6.25s |      6.38s |      6.42s |      6.45s |      6.47s |      6.25s |   1.36M/s |
-| query10  |      3.10s |      3.11s |      2.83s |      2.82s |      2.84s |      2.80s |   2.73M/s |
-| query11  |      9.99s |      9.76s |      7.93s |      2.22s |      0.52s |      0.39s |   2.09M/s |
-| query12  |      1.16s |      1.14s |      1.14s |      1.14s |      1.13s |      1.11s |   6.79M/s |
+| query07  |      1.42s |      1.49s |      1.38s |      1.42s |      1.43s |      1.50s |   5.55M/s |
+| query08  |      3.07s |      3.19s |      2.95s |      3.34s |      3.32s |      3.40s |   2.60M/s |
+| query09  |      4.70s |      5.09s |      5.00s |      5.04s |      5.09s |      4.72s |   1.81M/s |
+| query10  |      2.72s |      2.66s |      2.41s |      2.51s |      2.44s |      2.39s |   3.20M/s |
+| query11  |      9.99s |      9.65s |      7.89s |      2.16s |      0.42s |      0.30s |   2.67M/s |
+| query12  |      0.58s |      0.57s |      0.59s |      0.58s |      0.58s |      0.57s |  13.08M/s |
 | query13  |      3.80s |      3.65s |      2.84s |      2.47s |      2.33s |      2.21s | 746.20K/s |
-| query14  |      0.49s |      0.48s |      0.49s |      0.48s |      0.50s |      0.50s |  12.84M/s |
+| query14  |      0.37s |      0.36s |      0.37s |      0.37s |      0.36s |      0.38s |  17.06M/s |
 | query15  |      0.48s |      0.48s |      0.48s |      0.48s |      0.47s |      0.46s |  13.11M/s |
-| query16  |      0.91s |      0.81s |      0.64s |      0.62s |      0.60s |      0.72s |   1.68M/s |
-| query17  |      3.37s |      3.44s |      3.34s |      3.36s |      3.34s |      3.23s |   1.92M/s |
+| query16  |      0.91s |      0.68s |      0.55s |      0.50s |      0.51s |      0.58s |   2.04M/s |
+| query17  |      2.85s |      2.76s |      2.75s |      2.84s |      2.77s |      2.72s |   2.28M/s |
 | query18  |     14.95s |     13.79s |      8.23s |      7.81s |      7.93s |      7.73s | 990.00K/s |
 | query19  |      0.25s |      0.25s |      0.26s |      0.25s |      0.25s |      0.24s |  26.18M/s |
-| query20  |      0.97s |      0.87s |      0.88s |      0.88s |      0.86s |      0.88s |   7.92M/s |
-| query21  |      9.98s |     10.42s |      8.87s |      8.96s |      8.97s |      9.22s | 847.04K/s |
-| query22  |     46.70s |     46.83s |     38.40s |     10.28s |      1.96s |      1.30s |   1.26M/s |
+| query20  |      0.69s |      0.71s |      0.70s |      0.69s |      0.69s |      0.74s |   9.88M/s |
+| query21  |      5.78s |      6.26s |      5.32s |      4.90s |      4.92s |      5.14s |   1.52M/s |
+| query22  |     47.20s |     47.06s |     38.62s |     10.30s |      1.72s |      1.05s |   1.57M/s |
 
 There are a bunch of interesting bits in here. Many computations get no better with logical batching. This could make sense (I haven't looked yet!) when the supplied records mostly end up in the output, rather than being accumulated down. We see some pretty epic improvements, often in more problematic queries (e.g. `q11` and `q22`). All of the queries get up to half a million updates per second, suggesting they could sustain this rate if we can coarsen time to cope with load. Queries `q05`, `q16`, and `q21` have a bit of a wobbly profile, which seems reproducible and worth looking into; the improvement with logical batching is only due to operator code being written to take advantage of it.
 
@@ -510,27 +510,27 @@ To take an example, query 15 initially has a global aggregation to determine the
 |          | 100000 x 1 | 100000 x 1 -w2 | peak rate | improvement |
 |---------:|-----------:|---------------:|----------:|------------:|
 | query01  |      1.21s |          1.07s |   5.63M/s | 1.13x       |
-| query02  |      0.47s |          0.32s |   3.21M/s | 1.46x       |
-| query03  |      1.80s |          1.17s |   6.55M/s | 1.54x       |
+| query02  |      0.40s |          0.26s |   3.94M/s | 1.46x       |
+| query03  |      0.93s |          0.67s |  11.38M/s | 1.54x       |
 | query04  |      3.27s |          1.89s |   3.96M/s | 1.73x       |
-| query05  |      3.28s |          2.50s |   3.06M/s | 1.31x       |
+| query05  |      2.19s |          1.80s |   4.26M/s | 1.31x       |
 | query06  |      0.16s |          0.12s |  49.22M/s | 1.33x       |
-| query07  |      1.83s |          1.24s |   6.31M/s | 1.48x       |
-| query08  |      3.91s |          3.12s |   2.45M/s | 1.25x       |
-| query09  |      6.25s |          5.38s |   1.69M/s | 1.16x       |
-| query10  |      2.80s |          1.86s |   4.08M/s | 1.51x       |
-| query11  |      0.39s |          0.27s |   3.03M/s | 1.44x       |
-| query12  |      1.11s |          0.73s |  10.26M/s | 1.52x       |
+| query07  |      1.50s |          0.96s |   7.97M/s | 1.48x       |
+| query08  |      3.40s |          2.58s |   2.97M/s | 1.25x       |
+| query09  |      4.72s |          4.01s |   2.12M/s | 1.16x       |
+| query10  |      2.39s |          1.57s |   4.88M/s | 1.51x       |
+| query11  |      0.30s |          0.22s |   3.58M/s | 1.44x       |
+| query12  |      0.57s |          0.35s |  21.39M/s | 1.52x       |
 | query13  |      2.21s |          1.14s |   1.45M/s | 1.94x       |
-| query14  |      0.50s |          0.34s |  18.08M/s | 1.47x       |
-| query15  |      0.46s |          0.31s |  19.54M/s | 1.48x       |
-| query16  |      0.72s |          0.44s |   2.32M/s | 1.64x       |
-| query17  |      3.23s |          2.80s |   2.21M/s | 1.15x       |
+| query14  |      0.38s |          0.27s |  23.19M/s | 1.47x       |
+| query15  |      0.46s |          0.29s |  20.66M/s | 1.48x       |
+| query16  |      0.58s |          0.38s |   2.65M/s | 1.64x       |
+| query17  |      2.72s |          2.35s |   2.64M/s | 1.15x       |
 | query18  |      7.73s |          4.62s |   1.66M/s | 1.67x       |
 | query19  |      0.24s |          0.16s |  39.92M/s | 1.50x       |
-| query20  |      0.88s |          0.63s |  10.78M/s | 1.40x       |
-| query21  |      9.22s |          6.53s |   1.15M/s | 1.41x       |
-| query22  |      1.30s |          0.69s |   2.40M/s | 1.88x       |
+| query20  |      0.74s |          0.58s |  11.60M/s | 1.40x       |
+| query21  |      5.14s |          3.60s |   2.08M/s | 1.41x       |
+| query22  |      1.05s |          0.56s |   2.94M/s | 1.88x       |
 
 Oh hooray! They are all above one million tuples per second now! One million tuples piped into who knows what computations. It is possible that some of these are even correct, but let's not get ahead of ourselves. If nothing else, differential dataflow is good at moving tuples around.
 
