--- a/posts/2017-04-24.md
+++ b/posts/2017-04-24.md
@@ -1,6 +1,6 @@
 ## Implementing a TPC-H-like evaluation
 
-I recently coded up several computations in differential dataflow that are meant to track the twenty two computations in the [TPC-H](http://www.tpc.org/tpch/default.asp) benchmark. The computations in the benchmark are meant to be a bit more "realistic", let's say, than repeatedly doing breadth-first search over and over again. And indeed, I think I learned some things! I thought I would walk you through some of the queries and tell you some of the more interesting stories.
+I recently coded up several computations in differential dataflow that are meant to track the twenty two computations in the [TPC-H](http://www.tpc.org/tpch/default.asp) benchmark. I even made [a page for them](https://github.com/frankmcsherry/differential-dataflow/tree/master/tpchlike), with numbers and code and stuff. The computations in the benchmark are meant to be a bit more "realistic", let's say, than repeatedly doing breadth-first search over and over again. And indeed, I think I learned some things! I thought I would walk you through some of the queries and tell you some of the more interesting stories.
 
 ### Background on TPCH
 
