--- a/posts/2017-05-01.md
+++ b/posts/2017-05-01.md
@@ -10,7 +10,7 @@ These "arrangements" can make computations a lot more efficient, and enable beha
 
 Let's say you are the sort of person who likes graphs! As in: Pairs. Of. Integers. ZOMGYES! 
 
-(This all of this applies to relational-y computations other than graphs, so stick around even if this isn't your thing.)
+(All of this applies to relational-y computations other than graphs, so stick around even if this isn't your thing.)
 
 Imagine we have a stream of graph changes, things that look like
 
