--- a/posts/2017-05-01.md
+++ b/posts/2017-05-01.md
@@ -158,7 +158,7 @@ Each operator, like `join` and `group` is now written to work off of an `Arrange
 
 #### Trade-offs
 
-There are some downsides to using arranged data, although more exciting implementations could probably try to work around them. Mainly, by sharing the data we also need to share the restrictions we impose on the data when it comes to compaction of the history. If we have some operator that is falling to move forward in time, or doing so slowly, it may require the trace maintain historical data that others do not need so that it can operate correctly. Other operators will have to flip through historical distinctions that they themselves wouldn't have maintained, and could execute less efficiently than if they had their own personally compacted representation.
+There are some downsides to using arranged data, although more exciting implementations could probably try to work around them. Mainly, by sharing the data we also need to share the restrictions we impose on the data when it comes to compaction of the history. If we have some operator that is failing to move forward in time, or doing so slowly, it may require the trace maintain historical data that others do not need so that it can operate correctly. Other operators will have to flip through historical distinctions that they themselves wouldn't have maintained, and could execute less efficiently than if they had their own personally compacted representation.
 
 We've also bought pretty hard into immutability, which lines up nicely with shared data, but can be inefficient and wouldn't be necessary for uniquely owned indices. This prevents updating in place, and moves us towards a strategy of appending and merging immutable batches, and doing a great many allocations. I personally think this is responsible, as looking forward we are going to be "sharing" our trace data with the fault-tolerance mechanisms, who will benefit from immutably defined batches of data to transcribe and recover from.
 
