--- a/posts/2017-05-06.md
+++ b/posts/2017-05-06.md
@@ -88,7 +88,7 @@ pub trait CountTotalCore<G: Scope, K: Data, R: Diff> where G::Timestamp: Lattice
 
 The `count_total_core` method returns a `Collection` of `(K, R)` pairs, where `K` is the type of the key and `R` is the type of the accumulable quantity (`isize`, most often). This is different from what its `Group` analogue produces, but if you don't know about that then no worries; we'll cover it later.
 
-How about the implementation of this trait? I'm going to fire the whole thing at you; it is 53 lines.
+How about the implementation of this trait? I'm going to fire the whole thing at you; it is 53 lines. Then we will break it down.
 
 ```rust
 impl<G: Scope, K: Data, T1, R: Diff> CountTotalCore<G, K, R> for Arranged<G, K, (), R, T1>
@@ -147,7 +147,7 @@ where
 }
 ```
 
-Maybe let's break it down, and I can explain each of the things that are going on. 
+Now let's explain each of the things that are going on. 
 
 #### The declarations
 
@@ -166,7 +166,7 @@ where
 }
 ```
 
-All we are doing here is explaining for which types we plan on implmenting the trait. In this case, we are implementing it for `Arranged` types of a certain form: mainly, no values, just keys. We need the `Arranged`'s trace type to implement the `TraceReader` trait, which is what lets us read out of it using cursors. This is all pretty standard, if non-obvious, meaning that you would probably copy/paste it from somewhere else. I sure did.
+All we are doing here is explaining for which types we plan on implementing the trait. In this case, we are implementing it for `Arranged` types of a certain form: mainly, no values, just keys. We need the `Arranged`'s trace type to implement the `TraceReader` trait, which is what lets us read out of it using cursors. This is all pretty standard, if non-obvious, meaning that you would probably copy/paste it from somewhere else. I sure did.
 
 #### Introducing an operator
 
@@ -304,7 +304,7 @@ There is a reasonable improvement in start-up time (grinding through the first 5
 
 Here again we see a ~2.5x improvement once running, and a 1.5x reduction in start-up time.
 
-In fact, if we crack open the profiler at this point, almost all of the remaining time is spent arranging the inputs: we choose to order input updates before we process them (so that we scan through keys once, rather than performing random accesses). We do have two `count` operators we order the input for, and the 100,000 element batches turn into about 520,000 updates throughout the computation: each input "change" is two updates, and each of these updates lead to ~1.6 updates (sometimes the edges change but degrees don't).
+In fact, if we crack open the profiler at this point, almost all of the remaining time is spent arranging the inputs: we choose to order input updates before we process them (so that we scan through keys once, rather than performing random accesses). We do have two `count` operators we order the input for, and the 100,000 element batches turn into about 520,000 updates throughout the computation: each input "change" is two updates, and each of these updates lead to ~1.6 updates (sometimes the edges change but the degrees don't).
 
 That's basically all we are doing now. Maintaining indexed representations that absorb about half a million updates each sixth of a second, as part of 100,000 sequential updates. This leaves us in a great position to evaluate whether this is a good rate, or what we are leaving on the table. Three million updates per second is not brilliant compared with single-threaded hash maps, but when you have to start worrying about out-of-order updates things become a bit less clear. 
 
