--- a/posts/2017-05-06.md
+++ b/posts/2017-05-06.md
@@ -1,6 +1,6 @@
 ## Specializing differential dataflow
 
-Differential dataflow can do lots of weird and wonderful things, and the code that makes this happen can be at times quick complex. In fact, it can be much more complex than is required for simpler operations in relatively common cases. Today we'll look at specializing the implementation of the `count` operator to collections that change in a fairly common (and simple) way: totally ordered time.
+Differential dataflow can do lots of weird and wonderful things, and the code that makes this happen can be at times quite complex. In fact, it can be much more complex than is required for simpler operations in relatively common cases. Today we'll look at specializing the implementation of the `count` operator to collections that change in a fairly common (and simple) way: totally ordered time.
 
 ### Counting things
 
