--- a/posts/2017-05-06.md
+++ b/posts/2017-05-06.md
@@ -41,7 +41,7 @@ So let's look at how *simple* `count` can be if we don't have to do the hard wor
 
 ### Specialization
 
-The code for `count_total`, my name for this operator, is actually pretty simple. It does builds on some existing differential dataflow parts, like the [arrangements](https://github.com/frankmcsherry/blog/blob/master/posts/2017-05-01.md) we saw recently that maintain and compact indexed state for you, but I think that if you accept that functionality, the remaining implementation isn't so complicated.
+The code for `count_total`, my name for this operator, is actually pretty simple. It does build on some existing differential dataflow parts, like the [arrangements](https://github.com/frankmcsherry/blog/blob/master/posts/2017-05-01.md) we saw recently that maintain and compact indexed state for you, but I think that if you accept that functionality, the remaining implementation isn't so complicated.
 
 Let's look at the user-facing trait first:
 
