minor: typo fix in 2015-01-15.md

--- a/posts/2015-01-15.md
+++ b/posts/2015-01-15.md
@@ -175,7 +175,7 @@ The Hilbert implementation of `EdgeMapper` is similar to our prior implementatio
 *   `graph.upper` contains a sequence of `((u16, u16), u32)` values, each a 65536x65536 square indicating the upper 16 bits of x and y, followed by the number of edges in the square. These entries are ordered by the order their corresponding squares are visited by the curve.
 *   `graph.lower` contains a sequence of `(u16, u16)` values for the lower 16 bits for each edge. These entries are ordered by the the order the curve visits them when traversing their square.
 
-The `EdgeMapper` implementation is basically identical to the implementation for vertex-order above, but results in improved PageRank running times. One lesson is that PageRank is essentially memory-bound; the time is spent either thrashing the TLB or waiting for results from the memory controller, rather than the CPU or disk. It scales because each machine offers an indepedent memory controller. Instead, you can partially fix the problem by re-arranging memory accesses like we have done here.  You could also use [huge pages](http://en.wikipedia.org/wiki/Page_(computer_memory)#Huge_pages) (the C# code does), which I can't do yet on OS X.
+The `EdgeMapper` implementation is basically identical to the implementation for vertex-order above, but results in improved PageRank running times. One lesson is that PageRank is essentially memory-bound; the time is spent either thrashing the TLB or waiting for results from the memory controller, rather than the CPU or disk. It scales because each machine offers an independent memory controller. Instead, you can partially fix the problem by re-arranging memory accesses like we have done here.  You could also use [huge pages](http://en.wikipedia.org/wiki/Page_(computer_memory)#Huge_pages) (the C# code does), which I can't do yet on OS X.
 
 We should also admit that the Hilbert curve ordering is not typically how graphs are presented, and consequently there would be some work involved in transforming your input data to this ordering. If you are only planning on doing one computation, it may not be worth the effort. Fortunately, a single-threaded implementation takes less time to re-order the edges (about 180s in Rust) than any of the systems above take to perform 20 iterations of PageRank. It's included in the repository.
 
