minor: typo fix in 2015-01-15
do not seem "to be exist" -> do not seem "to exist"

--- a/posts/2015-01-15.md
+++ b/posts/2015-01-15.md
@@ -226,7 +226,7 @@ We'll use graph connectivity as our example, from label propagation to our faste
 |   8.0s | Pre-fetching `root[x]` and `root[y]` before the while loop |
 
 
-Note, these numbers differ from those reported above due to being a totally different implementation. Mainly, the first measurements took advantage of large pages, which do not seem to be exist on OS X. This benefit is largely recouped by using the Hilbert ordering, which also eases pressure on the TLB. The custom EdgeMapper re-uses a small buffer, and likely messes up the TLB less than mmap does.
+Note, these numbers differ from those reported above due to being a totally different implementation. Mainly, the first measurements took advantage of large pages, which do not seem to exist on OS X. This benefit is largely recouped by using the Hilbert ordering, which also eases pressure on the TLB. The custom EdgeMapper re-uses a small buffer, and likely messes up the TLB less than mmap does.
 
 ## Take-aways
 
