--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -254,15 +254,15 @@ Yes, these numbers look different. Although they are all better in absolute term
 
 One thing I like about thinking of the latency-throughput trade-off is that it helps me to better understand the implications of some possible optimizations, or a change in the system configuration. 
 
-For example, if we add more workers, do we expect the latency (and throughput) to improve, or just the throughput? Often this sort of scaling is evaluated in fixed "weak" and "strong" scaling experiments, where the load is either increased proportional to the workers, or not increased at all. These are interesting for sure, but we can learn even more by looking at the change in the curves. 
+For example, if we add more workers, do we expect the latency (and throughput) to improve, or just the throughput? Often this sort of scaling is evaluated in fixed "weak" and "strong" scaling experiments, where the load is either increased proportional to the workers, or not increased at all. The results reveal whether the system handles more load, or even handles the same load but faster. These are interesting for sure, but I think we can learn even more by looking at the change in the latency-throughput curves. 
 
-Let's look at the latency-throughput curves for multiple workers on our 10 million node, 50 million edge computation.
+Let's look at the latency-throughput curves for multiple workers on our 10 million node, 50 million edge computation. The solid line with circles is one worker, the dashed line with squares is two workers.
 
 ![lt-compare](https://github.com/frankmcsherry/blog/blob/master/assets/latency/lt-compare.png)
 
-Well, what do you think? The two worker line is in blue, and it looks pretty similar to the single worker line except maybe a little lower on the latency. This makes some sense because we have twice as many resources. So what do you wager the "speed-up" is for a given offered load? Probably not quite 2x, is what I'm guessing most systems folks would assume; you couldn't have made things more than twice as fast, and you probably didn't even manage that.
+Well, what do you think? The two worker line looks pretty similar to the single worker line, with each measurement a bit to the right and up a little; for the same batch size two workers yield at most twice the throughput and a bit more latency, which I think makes some sense because we have twice as many resources. So what do you wager the "speed-up" is for latency at a given offered load? Probably not quite 2x, is what I'm guessing most folks would assume; you couldn't have made things more than twice as fast, and you probably didn't even manage that.
 
-Let me pull out a few data points for comparison. Both techniques produce a reading of approximately 220,000 (it is the fourth circle and third square). The latencies 
+Let me pull out a few data points for comparison. Both experiments produced a reading of approximately 220,000 elements per second (it is the fourth circle and third square). The latencies are:
 
 |             |      latency | throughput |
 |------------:|-------------:|-----------:|
