--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -109,7 +109,9 @@ What about throughput now, though? Let's approximate and say it takes us about 5
 
 We saw high throughput when we had no particular expectations about latency, and we saw low throughput when we started to perform work that we expected to return quickly. What was the distinction? How do we control the trade-off, and maybe more interesting (to me) *should* we control the trade-off?
 
-In differential dataflow the trade-off is managed by the amount of work you offer to the system before requesting that it actually come back with an answer. In our `degrees.rs` example, that third parameter controls how many updates we present before letting the system get to work. The more updates we present, the more efficiently we can retire the batch of them. If we just present one update at a time the system has much less flexibility in how it evaluates the changes.
+In differential dataflow the trade-off is managed by the amount of work you offer to the system before requesting that it actually come back with some answers. In our `degrees.rs` example, that third parameter controls how many updates we present before letting the system get to work. The more updates we present, the more efficiently we can retire the batch of them. If we just present one update at a time the system has much less flexibility in how it evaluates the changes.
+
+Crucially, we aren't talking about returning fewer answers, or applying lots of changes simultaneously. We do want to see the same output as if we had applied the input updates one at a time, but we may have the flexibility to work on multiple input updates concurrently.
 
 Let's take a peek at the code in `degrees.rs` that feeds the computation with changes:
 
